# midi_degradation_toolkit

./: .gitignore  README.md  make_dataset.py  pylintrc  pyproject.toml
.github/workflows/: ci.yml
docs/: 07_compare_clean_vs_degraded.ipynb
mdtk/: degradations.py  degrader.py  formatters.py  pytorch_datasets.py  pytorch_trainers.py
mdtk/tests/: test_degradations.py  test_fileio.py
